--- a/src/index.css
+++ b/src/index.css
@@ -57,8 +57,10 @@ input {
   padding: 5px;
   color: #fff;
 }
+.main-nav .active{
+  background-color: #f0a504;
+}
 
-.main-nav .active,
 .main-nav a:hover,
 .search-form button:hover {
   background-color: #275270;
